--- a/env.example
+++ b/env.example
@@ -1,3 +1,7 @@
+# Copy to .env and fill in your values.
+# Required: DATABASE_URL, TELEGRAM_BOT_TOKEN, TELEGRAM_BOT_USERNAME, BASE_URL,
+#           THREADS_APP_ID, THREADS_APP_SECRET, THREADS_REDIRECT_URI
+
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/threads_reposter?schema=public"
 
